--- a/comme-o-spa/src/sass/04_pages/home.scss
+++ b/comme-o-spa/src/sass/04_pages/home.scss
@@ -1,3 +1,9 @@
 .homescreen {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 20px;
     color : #C68F7B;
 }
+
+.main-nav {}
